Segundo-envio-HTML

--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
                             Bibliotecas, Node-Js e pré-processadores<br> Super-Sayajin-Front-end-4= Frameworks <br> Super-Sayajin-Front-end-God= Gulp e Grunt<br> Super-Sayajin-Front-end-Instinto-Superior= Evitando as armadilhas
 
                         </p>
+                        <p>
+                            <a class="bt bt-verde" href="https://github.com/XorAndre/Projeto-Front-Super-Sayajin">Confira o material</a>
+                        </p>
+                    </div>
+                    <div class="col-4">
+                        <img src="assets/img/gohan.png" alt="Gohan-estudando">
                     </div>
                 </article>
             </section>
